2005-03-18 Manjula GHM <mmanjula@novell.com>
           Sudharsan V <vsudharsan@novell.com>
          * Test cases for Type members and Like operator
2005-02-09  Raja R Harinath  <rharinath@novell.com>

	* Makefile (SUBDIRS): Add 'rerrors'.

2005-01-26 Rafael Teixeira <rafaelteixeirabr@hotmail.com>
	* misc/test3.vb : better winforms code (this one runs with current MWF implementation)

2004-12-20  Jambunathan K  <kjambunathan@novell.com>
	* README.tests: Added
	* Makefile (DISTFILES): Added README.tests

2004-11-25  Raja R Harinath  <rharinath@novell.com>

	* Makefile: New.
	* test-mbas.make (thisdir): Remove.
	(COMPILER): Use $(BASCOMPILE).
	(run-test-local): Quote arguments.
	* test-mbas.pl ($Runtime): Don't try to auto-detect.
	* errors/Makefile, misc/Makefile, tests/Makefile, dlls/Makefile: Update.

2004-11-22  Jambunathan K  <kjambunathan@novell.com>
	* EnumD.vb: New positive test case.

2004-11-22  Jambunathan K  <kjambunathan@novell.com>
	* test-mbas.make: Implemented all STD_TARGETS specifically run-test and
	run-test-ondotnet.

2004-11-02  Jambunathan K  <kjambunathan@novell.com>
	* test-mbas.pl:
	* test-mbas.make: Added support for --runtime option in
	test-mbas.pl. When working with mbas within the cygwin
	environment, this option permits executing of compiled test cases
	either within the Microsoft's .NET runtime environment or the
	mono's runtime environment.

2004-10-29  Jambunathan K  <kjambunathan@novell.com>
	* errors/AttributesC8.vb: 
	* errors/AttributesC7.vb: 
	* errors/AttributesC3.vb: Newly added.

2004-10-18  Jambunathan K  <kjambunathan@novell.com>
	* Migrating mbas test cases from mcs/btests to mcs/mbas/Test
	folder.

2004-10-15  Jambunathan K  <kjambunathan@novell.com>
	* Audited existing negative test cases that emit multiple,
	mutually independent error messages and splitted them in to
	multiple files where possible so that atmost one error is tested
	for in any given file.

2004-10-14 Anirban Bhattacharjee <banirban@novell.com>